# scraping_web

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  changelog.md  pyproject.toml
.claude/: settings.json
.claude/rules/: improvement-areas.md  optimization-areas.md  refactoring-areas.md  testing.md
notebooks/: malaga_events_20250424.csv  parse_html.ipynb
scripts/: playwright_tutorial.py  pre-commit.sh
