[project]
name = "web-scraping"
version = "0.3.3"
description = "Web scraping tutorial"
authors = [
    { name = "Carlos Pinto", email = "carlospinto4p@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.0.0",
    "requests>=2.28.2",
    "beautifulsoup4>=4.12.0",
    "pandas>=1.5.3",
    "html5lib>=1.1",
    "lxml>=4.9.2",
    "tqdm>=4.65.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 78

[tool.pytest.ini_options]
testpaths = ["tests"]
